--- a/portfolio/inicio/templates/index.html
+++ b/portfolio/inicio/templates/index.html
@@ -113,7 +113,7 @@
                             <img class="img-fluid" src='{% static "assets/img/portfolio/thumbnails/1.jpg" %}' alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">Project 1</div>
                             </div>
                         </a>
                     </div>
@@ -122,7 +122,7 @@
                             <img class="img-fluid" src= '{% static "assets/img/portfolio/thumbnails/2.jpg"%}' alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">Project 2</div>
                             </div>
                         </a>
                     </div>
@@ -131,7 +131,7 @@
                             <img class="img-fluid" src='{% static "assets/img/portfolio/thumbnails/3.jpg"%}' alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">Project 3</div>
                             </div>
                         </a>
                     </div>
@@ -140,7 +140,7 @@
                             <img class="img-fluid" src='{% static "assets/img/portfolio/thumbnails/4.jpg"%}' alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">Project 4</div>
                             </div>
                         </a>
                     </div>
@@ -149,7 +149,7 @@
                             <img class="img-fluid" src='{% static "assets/img/portfolio/thumbnails/5.jpg"%}' alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">Project 5</div>
                             </div>
                         </a>
                     </div>
@@ -158,7 +158,7 @@
                             <img class="img-fluid" src='{% static "assets/img/portfolio/thumbnails/6.jpg"%}' alt="..." />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">Project 6</div>
                             </div>
                         </a>
                     </div>
@@ -173,7 +173,7 @@
                                 <img class="img-fluid" src='{% static "assets/img/portfolio/thumbnails/1.jpg" %}' alt="..." />
                                 <div class="portfolio-box-caption">
                                     <div class="project-category text-white-50">Category</div>
-                                    <div class="project-name">Project Name</div>
+                                    <div class="project-name">Project 7</div>
                                 </div>
                             </a>
                         </div>
@@ -182,7 +182,7 @@
                                 <img class="img-fluid" src= '{% static "assets/img/portfolio/thumbnails/2.jpg"%}' alt="..." />
                                 <div class="portfolio-box-caption">
                                     <div class="project-category text-white-50">Category</div>
-                                    <div class="project-name">Project Name</div>
+                                    <div class="project-name">Project 8</div>
                                 </div>
                             </a>
                         </div>
@@ -191,34 +191,7 @@
                                 <img class="img-fluid" src='{% static "assets/img/portfolio/thumbnails/3.jpg"%}' alt="..." />
                                 <div class="portfolio-box-caption">
                                     <div class="project-category text-white-50">Category</div>
-                                    <div class="project-name">Project Name</div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-lg-4 col-sm-6">
-                            <a class="portfolio-box" href='{% static "assets/img/portfolio/fullsize/4.jpg"%}' title="Project Name">
-                                <img class="img-fluid" src='{% static "assets/img/portfolio/thumbnails/4.jpg"%}' alt="..." />
-                                <div class="portfolio-box-caption">
-                                    <div class="project-category text-white-50">Category</div>
-                                    <div class="project-name">Project Name</div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-lg-4 col-sm-6">
-                            <a class="portfolio-box" href='{% static "assets/img/portfolio/fullsize/5.jpg"%}' title="Project Name">
-                                <img class="img-fluid" src='{% static "assets/img/portfolio/thumbnails/5.jpg"%}' alt="..." />
-                                <div class="portfolio-box-caption">
-                                    <div class="project-category text-white-50">Category</div>
-                                    <div class="project-name">Project Name</div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-lg-4 col-sm-6">
-                            <a class="portfolio-box" href='{% static "assets/img/portfolio/fullsize/6.jpg"%}' title="Project Name">
-                                <img class="img-fluid" src='{% static "assets/img/portfolio/thumbnails/6.jpg"%}' alt="..." />
-                                <div class="portfolio-box-caption p-3">
-                                    <div class="project-category text-white-50">Category</div>
-                                    <div class="project-name">Project Name</div>
+                                    <div class="project-name">Project 9</div>
                                 </div>
                             </a>
                         </div>
@@ -239,13 +212,6 @@
                 </div>
                 <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
                     <div class="col-lg-6">
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- * * SB Forms Contact Form * *-->
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- This form is pre-integrated with SB Forms.-->
-                        <!-- To make this form functional, sign up at-->
-                        <!-- https://startbootstrap.com/solution/contact-forms-->
-                        <!-- to get an API token!-->
                         <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                             <!-- Name input-->
                             <div class="form-floating mb-3">
@@ -278,10 +244,8 @@
                             <!-- has successfully submitted-->
                             <div class="d-none" id="submitSuccessMessage">
                                 <div class="text-center mb-3">
-                                    <div class="fw-bolder">Form submission successful!</div>
-                                    To activate this form, sign up at
+                                    <div class="fw-bolder">Tu mensaje fue enviado con exito!</div>
                                     <br />
-                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
                                 </div>
                             </div>
                             <!-- Submit error message-->
