--- a/portfolio/inicio/templates/index.html
+++ b/portfolio/inicio/templates/index.html
@@ -28,7 +28,7 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#about">Un poco de mí</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">Sobre mí</a></li>
                         <li class="nav-item"><a class="nav-link" href="#services">Skills</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
@@ -57,7 +57,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Un poco de mi</h2>
+                        <h2 class="text-white mt-0">Sobre mi</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">Soy oriundo de la ciudad de Posadas, ubicada en la provinca de Misiones en la República Argentina. Tengo 28 años y actualmente vivo en la ciudad de Rosario del mismo país y aunque curse hasta segundo año de la carrera de Farmacia en la rama de la salud, me termine decidiendo por este increíble viaje que es la tecnolgía. En este momento me encuentro haciendo el curso de data scientist donde aspiro lograr muchas cosas.</p>
                     </div>
@@ -252,7 +252,7 @@
                             <!---->
                             <!-- This is what your users will see when there is-->
                             <!-- an error submitting the form-->
-                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
+                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error al enviar el mensaje!</div></div>
                             <!-- Submit Button-->
                             <div class="d-grid"><button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Enviar</button></div>
                         </form>
